--- a/css/nav-2.css
+++ b/css/nav-2.css
@@ -12,13 +12,15 @@ header{
 		margin-top: 53px;
 	}
 }
-h1{
+.navigation a h1{
 	font-size: 1.35em;
   font-family: 'jacksilverregular';
 	margin: .2em .4em 0;
+	position: absolute;
+	left: 0;
 }
 @media only screen and (min-width: 480px){
-  h1{
+  .navigation a h1{
     font-size: 1.6em;
   }
 }
@@ -76,7 +78,7 @@ h1{
 	}
 }
 #nav2{
-	white-space: nowrap;
+	/* white-space: nowrap; */
 	line-height: 1em;
 	text-align: center;
 	list-style: none;
@@ -91,8 +93,8 @@ h1{
 }
 @media only screen and (min-width: 992px){
 	#nav2{
-		margin: 0 auto;
-		left: unset;
+		/* margin: 0 auto;
+		left: unset; */
 		transform: unset;
 		visibility: visible;
 		display: flex;
