--- a/css/style.css
+++ b/css/style.css
@@ -86,20 +86,9 @@ h3{
 	color: #1C4C87; /*color*/
 }
 h1{
-	/* font-size: 2em; */
   font-family: 'jacksilverregular';
 	margin: 0;
 	line-height: 1em;
-}
-@media only screen and (min-width: 480px){
-	h1{
-		/* font-size: 2.3em; */
-	}
-}
-@media only screen and (min-width: 768px){
-	h1{
-		/* font-size: 3.7em; */
-	}
 }
 h2, h3{
 	font-family: 'Noto Serif', serif;
@@ -124,11 +113,11 @@ h2, h3, h4{
     margin-top: 1em;
 }
 header{
+	margin-top: 39px;
 	position: relative;
 }
 @media only screen and (min-width: 992px){
 	header{
-		
 		display: block !important; /* Tied to overlay */
 	}
 }
@@ -233,6 +222,50 @@ a:focus img{
     font-weight: normal;
 	font-style: normal;
 	font-display: block;
+}
+
+
+/* 1.1.1. Navigation */
+
+.navigation{
+	font: 16px 'Source Sans Pro', sans-serif;
+	font-weight: 400;
+	text-align: center;
+	line-height: 1em;
+  background-color: white;
+	height: 39px;
+	width: 100%;
+	top: 0;
+	position: fixed;
+	z-index: 20;
+}
+.navigation a{
+	text-decoration: none;
+}
+.navigation ul{
+	list-style: none;
+	margin: 0;
+	padding: 0;
+	width: 100%;
+	height: 100%;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+.navigation li{
+	display: inline-block;
+}
+.navigation li span{
+	display: none;
+	visibility: hidden;
+}
+.navigation h1{
+	font-size: 1.3em;
+	padding-left: .4em;
+}
+.navigation li a i{
+	color: rgba(0, 0, 0, 1);
+	padding-right: .6em;
 }
 
 
