--- a/css/style.css
+++ b/css/style.css
@@ -1,36 +1,8 @@
-header{
-	margin: 0 auto;
-	/* max-width: 1024px; */
-}
-footer{
-	margin: 0 auto;
-}
-
-main,
-footer{
-	padding: 0 1em;
-	text-align: center;
-}
-@media only screen and (min-width: 768px){
-	main,
-	footer{
-		padding: 1.5em 1em 0;
-	}	
-}
-main section p,
-main section ol,
-main section ul{
-	text-align: left;
-}
-
-
-
-
 /* This CSS file has been developed from the CSS file for Fieldwork of Empire (https://awisnicki.github.io/fieldwork_of_empire/). The CSS code in the latter is released under a Creative Commons Attribution-NonCommercial 4.0 International (CC BY-NC 4.0) license (https://creativecommons.org/licenses/by-nc/4.0/). Please feel free to reuse the code in the file, just be sure to attribute it properly and publicly on your site. */
 
 /* This CSS Main File adapted from One More Voice (https://onemorevoice.org/) */
 
-/* Created and maintained by Adrian S. Wisnicki */ /* 2020 */
+/* Created and maintained by Adrian S. Wisnicki */ /* 2020-2021 */
 
 /* 
 Table of Contents
@@ -39,11 +11,12 @@ Table of Contents
 
 ** 1.0. Main CSS **
 1.1. Main Components
-1.2. Carousel 
-1.3. Scroll to Top Button
-1.4. Lines
-1.5. Formatting
-1.6. Lists
+1.2. Navigation
+1.3. Carousel 
+1.4. Scroll to Top Button
+1.5. Lines
+1.6. Formatting
+1.7. Lists
 */
 
 /*--------------------------------------*/
@@ -97,26 +70,29 @@ main{
 @media only screen and (min-width: 480px){
 	main{
 		font-size: .95em;
-		/* padding: 0 1.5em 1em 1.5em; */
 	}
 }
 @media only screen and (min-width: 768px){
 	main{
 		font-size: 1em;
-		/* padding: 1em 2.25em 1em 2.25em; */
+		padding: 1.5em 1em 0;
 	}
 }
 @media only screen and (min-width: 992px){
 	main{
 		font-size: 1.10em;
-		/* max-width: 36em; */
 		display: block !important; /* Tied to overlay */
 	}
+}
+main section p,
+main section ol,
+main section ul{
+	text-align: left;
 }
 h1,
 h2,
 h3{
-	color: #1C4C87; /*color*/
+	color: #1C4C87;
 }
 h1{
   font-family: 'jacksilverregular';
@@ -146,12 +122,28 @@ h2, h3, h4{
     margin-top: 1em;
 }
 header{
+	margin: 0 auto;
 	margin-top: 39px;
 	position: relative;
+}
+@media only screen and (min-width: 480px){
+	header{
+		margin-top: 44px;
+	}
+}
+@media only screen and (min-width: 768px){
+	header{
+		margin-top: 48px;
+	}
 }
 @media only screen and (min-width: 992px){
 	header{
 		display: block !important; /* Tied to overlay */
+	}
+}
+@media only screen and (min-width: 992px){
+	header{
+		margin-top: 65px;
 	}
 }
 .organizers{
@@ -174,21 +166,62 @@ header{
 img{
 	font-weight: 300;
 	width: 100%;
-	/* display: inline-block; */
 }
-#upcoming img,
 #call img{
 	width: 100%;
-	/* display: block; */
 }
 .image-border{
 	border: 1px solid gray;
 }
+footer{
+	font-size: .9em;
+	text-align: center;
+	line-height: 1.6em;
+	margin: 0 auto;
+	padding: 0 1em;
+}
+@media only screen and (min-width: 768px){
+	footer{
+		padding: 1.5em 1em 0;
+	}	
+}
+*:focus{
+	outline: 0 none;
+}
+a,
+a:visited{
+	color: #1157AC;
+}
+a:hover,
+a:focus{
+	color: white;
+	background-color: #1157AC;
+}
+a img{
+	border: 3px white solid;
+}
+a:hover img,
+a:focus img{
+	border: 3px #2e68ac solid;
+}
+/*logo*/
+@font-face {
+    font-family: 'jacksilverregular';
+    src: url('../fonts/jacksilver-webfont.woff2') format('woff2'),
+         url('../fonts/jacksilver-webfont.woff') format('woff');
+    font-weight: normal;
+	font-style: normal;
+	font-display: block;
+}
+
+
+/* 1.2. Navigation */
+
 /* "Skip to main content" coding adapted from https://webaim.org/techniques/skipnav/ */
 #skiptocontent a{
 	font-size: .9em;
-	color: white; /*color*/
-	background-color: #1157AC; /*color*/
+	color: white;
+	background-color: #1157AC;
 	padding: 8px 6px;
 	border-right: 2px solid white;
 	border-bottom: 2px solid white;
@@ -213,42 +246,7 @@ img{
 		position: absolute;
 	}
 }
-.footer{
-	font-size: .9em;
-	line-height: 1.6em;
-}
-*:focus{
-	outline: 0 none;
-}
-a,
-a:visited{
-	color: #1157AC; /*color*/
-}
-a:hover,
-a:focus{
-	color: white; /*color*/
-	background-color: #1157AC; /*color*/
-}
-a img{
-	border: 3px white solid;
-}
-a:hover img,
-a:focus img{
-	border: 3px #2e68ac solid;
-}
-/*logo*/
-@font-face {
-    font-family: 'jacksilverregular';
-    src: url('../fonts/jacksilver-webfont.woff2') format('woff2'),
-         url('../fonts/jacksilver-webfont.woff') format('woff');
-    font-weight: normal;
-	font-style: normal;
-	font-display: block;
-}
-
-
-/* 1.1.1. Navigation */
-
+/* Main nav */
 nav#nav1{
 	font: 16px 'Source Sans Pro', sans-serif;
 	font-weight: 400;
@@ -259,6 +257,22 @@ nav#nav1{
 	top: 0;
 	position: fixed;
 	z-index: 20;
+}
+@media only screen and (min-width: 480px){
+	nav#nav1{
+		height: 44px;
+	}
+}
+@media only screen and (min-width: 768px){
+	nav#nav1{
+		height: 48px;
+	}
+}
+@media only screen and (min-width: 992px){
+	nav#nav1{
+		margin: 0 auto;
+		height: 60px;
+	}
 }
 nav#nav1 a,
 nav#nav1 a:visited{
@@ -283,6 +297,22 @@ nav#nav1 ul{
 	justify-content: space-between;
 	align-items: center;
 }
+@media only screen and (min-width: 480px){
+	nav#nav1 ul{
+		padding: 0 1em 0 0;
+	}
+}
+@media only screen and (min-width: 992px){
+	nav#nav1 ul{
+		padding: 0 1em;
+		max-width: 1366px;
+	}
+}
+@media only screen and (min-width: 1024px){
+	nav#nav1 ul{
+		justify-content: space-evenly;
+	}
+}
 nav#nav1 li{
 	display: inline-block;
 }
@@ -291,29 +321,39 @@ nav#nav1 li span{
 	visibility: hidden;
 	padding: 6px 8px;
 }
+@media only screen and (min-width: 992px){
+	nav#nav1 li span{
+		font-size: .9em;
+		font-weight: 600;
+		display: block;
+		visibility: visible;
+	}
+}
 nav#nav1 li a:hover span,
 nav#nav1 li a:focus-within span{
 	color: white;
 	background-color: #1C4C87;
 	border-radius: 5px;
 }
+@media only screen and (min-width: 768px){
+	#nav#nav2 > li:nth-child(8){
+		font-size: 1.3em;
+	}
+}
+@media only screen and (min-width: 992px){
+	#nav#nav2 > li:nth-child(1) > a{
+		color: #1C4C87;
+	}
+}
 nav#nav1 h1{
 	font-size: 1.3em;
 	padding: 6px 8px;
-	/* padding-left: .4em; */
 }
 nav#nav1 li a:hover h1,
 nav#nav1 li a:focus-within h1{
 	color: rgba(0, 0, 0, 1);
 }
-nav#nav1 li a i{
-	color: rgba(0, 0, 0, 1);
-	/* padding-right: .6em; */
-}
 @media only screen and (min-width: 480px){
-	nav#nav1{
-		height: 44px;
-	}
 	nav#nav1 h1{
 		font-size: 1.5em;
 		/* white-space: nowrap;
@@ -322,80 +362,35 @@ nav#nav1 li a i{
 		left: 50%;
 		transform: translate(-50%, -50%); */
 	}
-	nav#nav1 ul{
-		padding: 0 1em 0 0;
-	}
-	nav#nav1 li a i{
-		font-size: 1.2em;
-	}
-	header{
-		margin-top: 44px;
-	}
 }
 @media only screen and (min-width: 768px){
-	nav#nav1{
-		height: 48px;
-	}
-	/* nav#nav1 ul{
-		padding: 0 1.5em;
-	} */
 	nav#nav1 h1{
 		font-size: 1.7em;
-		/* white-space: nowrap;
-		position: absolute;
-		top: 50%;
-		left: 50%;
-		transform: translate(-50%, -50%); */
-	}
-	#nav#nav2 > li:nth-child(8){
-		font-size: 1.3em;
-	}
-	header{
-		margin-top: 48px;
 	}
 }
 @media only screen and (min-width: 992px){
-	nav#nav1{
-		/* text-align: center; */
-		margin: 0 auto;
-		height: 60px;
-	}
-	nav#nav1 ul{
-		padding: 0 1em;
-		max-width: 1366px;
-	}
-	#nav#nav2 > li:nth-child(1) > a{
-		color: #1C4C87;
-		/* text-decoration: none; */
-	}
 	nav#nav1 h1{
 		font-size: 2em;
-		/* padding: 0; */
 	}
-	nav#nav1 li span{
-		font-size: .9em;
-		font-weight: 600;
-		display: block;
-		visibility: visible;
+}
+nav#nav1 li a i{
+	color: rgba(0, 0, 0, 1);
+}
+@media only screen and (min-width: 480px){
+	nav#nav1 li a i{
+		font-size: 1.2em;
 	}
+}
+@media only screen and (min-width: 992px){
 	ul#nav2 > li:nth-child(8),
 	nav#nav1 li a i{
 		display: none;
 		visibility: hidden;
 	}
-	header{
-		margin-top: 65px;
-	}
-}
-@media only screen and (min-width: 1024px){
-	nav#nav1 ul{
-		justify-content: space-evenly;
-	}
 }
 
 
-
-/* 1.2. Carousel */
+/* 1.3. Carousel */
 
 /* 	Carousel adapted from https://www.w3.org/TR/wai-aria-practices-1.1/examples/carousel/carousel-1.html */
 .carousel .carousel-inner{
@@ -428,7 +423,7 @@ nav#nav1 li a i{
 }
 /* Carousel images */
 .carousel .carousel-item .carousel-image{
-	background: #E3E3E3; /*color*/
+	background: #E3E3E3;
 }
 @media screen and (min-width:320px){
 	.carousel .carousel-item .carousel-image{
@@ -528,7 +523,7 @@ nav#nav1 li a i{
 .image-caption a{
 	text-decoration: underline;
 	color: #fff;
-	background-color: rgba(0, 0, 0, 0.65); /*color*/
+	background-color: rgba(0, 0, 0, 0.65);
 	border: 2px solid transparent;
 	border-radius: 5px;
 	margin: 0;
@@ -539,17 +534,17 @@ nav#nav1 li a i{
 .carousel .carousel-item .carousel-caption a:focus,
 .image-caption a:hover,
 .image-caption a:focus{
-	background-color: #1157AC; /*color*/
+	background-color: #1157AC;
 	margin: 0;
 }
 .carousel .carousel-item .carousel-caption a:focus,
 .image-caption a:focus{
-	border-color: #1157AC; /*color*/
-	box-shadow: inset 0px 0px 0px 2px #fff; /*color*/
-	-webkit-box-shadow: inset 0px 0px 0px 2px #fff; /*color*/
-    -moz-box-shadow: inset 0px 0px 0px 2px #fff; /*color*/
+	border-color: #1157AC;
+	box-shadow: inset 0px 0px 0px 2px #fff;
+	-webkit-box-shadow: inset 0px 0px 0px 2px #fff;
+    -moz-box-shadow: inset 0px 0px 0px 2px #fff;
 }
-/* image caption */
+/* Image caption */
 .image-wrapper{
 	margin: 0 auto;
 	position: relative;
@@ -584,8 +579,8 @@ nav#nav1 li a i{
 .carousel .controls button:hover rect.background,
 .carousel .controls button:focus rect.border,
 .carousel .controls button:hover rect.border{
-	fill: #1157AC; ; /*color*/
-	stroke: #1157AC; /*color*/
+	fill: #1157AC; ;
+	stroke: #1157AC;
 	opacity: 1;
 }
 /* Next and Previous Slide Controls */
@@ -636,7 +631,8 @@ nav#nav1 li a i{
 	stroke: white;
 }
 
-/* 1.3. Scroll to Top Button */
+
+/* 1.4. Scroll to Top Button */
 
 /* Scroll to top button */
 /* Adapted from https://www.w3schools.com/howto/howto_js_scroll_to_top.asp */
@@ -685,7 +681,7 @@ nav#nav1 li a i{
 }
 
 
-/* 1.4. Lines */
+/* 1.5. Lines */
 
 hr{
 	background-color: gray;
@@ -701,7 +697,8 @@ hr.section-divider{
 	}
 }
 
-/* 1.5. Formatting */
+
+/* 1.6. Formatting */
 
 .bold{
 	font-weight: bold;
@@ -740,44 +737,8 @@ hr.section-divider{
 }
 
 
-/* 1.6. Lists */
+/* 1.7. Lists */
 
-/* .main-menu ol{
-	text-align: center;
-	list-style: none;
-	padding: 0;
-	margin: 0;
-	box-sizing: border-box;
-	display: inline-grid;
-	grid-template-columns: auto;
-}
-@media (min-width: 320px){
-	.main-menu ol {
-		grid-template-columns: auto auto;
-	}
-  }
-@media (min-width: 480px){
-	.main-menu ol {
-		grid-template-columns: auto auto auto;
-	}
-  }
-@media (min-width: 768px){
-	.main-menu ol {
-		grid-template-columns: auto auto auto auto auto auto;
-	}
-}
-.main-menu li{
-	font-size: 1.1em;
-	margin: .5em .5em;
-}
-nav.main-menu{
-	margin: 1em auto 3em auto;
-}
-@media (min-width: 992px){
-	nav.main-menu{
-		max-width: 90%;
-	}
-} */
 ol.mission{
 	padding: 0;
 	margin: 0 1em;
@@ -785,36 +746,5 @@ ol.mission{
 @media (min-width: 768px){
 	ol.mission{
 		margin: 0 2em;
-	}
-}
-#upcoming > ul > li > span{
-	font-size: 1.2em;
-	font-variant: small-caps;
-}
-#upcoming > ul{
-	list-style: none;
-	/* padding: 0;
-	margin: 0; */
-}
-#upcoming > ul > li:nth-child(1) > ul{
-	margin-bottom: 1em;
-}
-#upcoming > ul > li > ul{
-	/* padding: 0;
-	margin: 0 1.4em; */
-}
-#upcoming > ul > li > ul > li > ol{
-	/* padding: 0;
-	margin: 0 2.4em; */
-}
-@media (min-width: 768px){
-	#upcoming > ul{
-		/* margin: 0 2em; */
-	}
-	#upcoming > ul > li > ul{
-		/* margin: 0 3em; */
-	}
-	#upcoming > ul > li > ul > li > ol{
-		/* margin: 0 4em; */
 	}
 }
