--- a/css/style.css
+++ b/css/style.css
@@ -13,9 +13,8 @@ Table of Contents
 1.1. Main Components
 1.2. Headings, Images, Anchors
 1.3. Navigation
-1.3. Carousel 
-1.4. Scroll to Top Button
-1.5. Lines
+1.4. Carousel 
+1.5. Scroll to Top Button
 1.6. Formatting
 1.7. Lines and Lists
 */
@@ -54,8 +53,8 @@ html{
 	-webkit-hyphens: auto;
 }
 body{
-	padding: 0;
 	margin: 0;
+	padding: 0;
 	width: 100%;
 	max-width: 100%;
 }
@@ -93,8 +92,7 @@ main section ul{
 	text-align: left;
 }
 header{
-	margin: 0 auto;
-	margin-top: 39px;
+	margin: 39px auto 0;
 	position: relative;
 }
 @media only screen and (min-width: 480px){
@@ -175,8 +173,8 @@ h3{
 }
 h1{
   font-family: 'jacksilverregular';
-	margin: 0;
 	line-height: 1em;
+	margin: 0;
 }
 h2, h3{
 	font-family: 'Noto Serif', serif;
@@ -202,10 +200,10 @@ h4{
 }
 /*logo*/
 @font-face {
-    font-family: 'jacksilverregular';
-    src: url('../fonts/jacksilver-webfont.woff2') format('woff2'),
-         url('../fonts/jacksilver-webfont.woff') format('woff');
-    font-weight: normal;
+  font-family: 'jacksilverregular';
+  src: url('../fonts/jacksilver-webfont.woff2') format('woff2'),
+      url('../fonts/jacksilver-webfont.woff') format('woff');
+  font-weight: normal;
 	font-style: normal;
 	font-display: block;
 }
@@ -228,10 +226,10 @@ img{
 	font-size: .9em;
 	color: white;
 	background-color: #1157AC;
-	padding: 8px 6px;
 	border-right: 2px solid white;
 	border-bottom: 2px solid white;
 	border-bottom-right-radius: 8px;
+	padding: 8px 6px;
 	position: absolute;
 	top: -40px;
 	left: 0px;
@@ -259,10 +257,10 @@ nav#nav1{
 	line-height: 1em;
   background-color: white;
 	margin: 0 auto;
-	height: 39px;
 	width: 100%;
-	top: 0;
+	height: 39px;
 	position: fixed;
+	top: 0;
 	z-index: 20;
 }
 @media only screen and (min-width: 480px){
@@ -295,8 +293,8 @@ nav#nav1.borderBottom{
 }
 nav#nav1 ul{
 	list-style: none;
-	padding: 0 .75em 0 0;
 	margin: 0 auto;
+	padding: 0 .75em 0 0;
 	height: 100%;
 	max-width: 898px;
 	display: flex;
@@ -406,8 +404,8 @@ nav#nav1 li:nth-child(8) a:focus-within i{
 
 /* 	Carousel adapted from https://www.w3.org/TR/wai-aria-practices-1.1/examples/carousel/carousel-1.html */
 .carousel .carousel-inner{
-	max-width: 900px;
 	margin: 0 auto;
+	max-width: 900px;
 	position: relative;
 	}
 @media only screen and (min-width: 992px){
@@ -458,9 +456,9 @@ nav#nav1 li:nth-child(8) a:focus-within i{
 	}
 }	
 .carousel .carousel-item .carousel-image img{
+	width: 100% !important;
 	height: 100%;
 	max-height: 183px;
-	width: 100% !important;
 	object-fit:cover;
 	-o-object-fit: cover;
 	overflow: hidden;
@@ -487,10 +485,10 @@ nav#nav1 li:nth-child(8) a:focus-within i{
 	text-align: center;
 	line-height: 1.2em;
 	padding: 0;
-	right: 0;
-	left: 0;
-	bottom: .4em;
 	position: absolute;
+	right: 0;
+	bottom: .4em;
+	left: 0;
 }
 @media only screen and (min-width: 480px){
 	.carousel .carousel-item .carousel-caption,
@@ -502,16 +500,16 @@ nav#nav1 li:nth-child(8) a:focus-within i{
 @media only screen and (min-width: 768px){
 	.carousel .carousel-item .carousel-caption{
 		right: .5em;
-		left: unset;
 		bottom: .5em;
+		left: unset;
 	}
 }
 .carousel .carousel-item .carousel-caption h3,
 .image-caption h3{
 	font: 16px 'Noto Serif', serif;
 	font-weight: 400;
-	padding: 0;
 	margin: 0;
+	padding: 0;
 	display: inline-block;
 }
 @media only screen and (min-width: 320px){
@@ -571,9 +569,9 @@ nav#nav1 li:nth-child(8) a:focus-within i{
 	border: none;
 	outline: none;
 	padding: 0;
-	z-index: 10;
-	top: 5px;
 	position: absolute;
+	top: 5px;
+	z-index: 10;
 }
 .carousel .controls button svg rect.background{
 	fill: black;
@@ -656,11 +654,12 @@ nav#nav1 li:nth-child(8) a:focus-within i{
 	border-radius: 4px;
 	outline: none;
 	padding: 5px;
-	bottom: 110px;
-	right: 20px;
 	position: fixed;
+	right: 20px;
+	bottom: 110px;
 	z-index: 99;
 	display: none;
+	visibility: hidden;
   }
 @media only screen and (min-width: 480px){
 	#topButton{
@@ -680,9 +679,9 @@ nav#nav1 li:nth-child(8) a:focus-within i{
 }
   #topButton:hover,
   #topButton:focus{
+		font-weight: 600;
 	color: #1157AC;
 	background-color: white;
-	font-weight: 600;
 	border: 2px solid #1157AC;
 }
 #topButton:active{
@@ -746,8 +745,8 @@ hr{
 	}
 }
 ol.mission{
-	padding: 0;
 	margin: 0 1em;
+	padding: 0;
 }
 @media (min-width: 768px){
 	ol.mission{
