--- a/css/style.css
+++ b/css/style.css
@@ -158,6 +158,7 @@ a:hover,
 a:focus{
 	color: white;
 	background-color: #1157AC;
+	transition: 0.2s;
 }
 a img{
 	border: 3px white solid;
@@ -287,6 +288,7 @@ nav#nav1 a:hover,
 nav#nav1 a:focus{
 	color: white;
 	background: #191716;
+	transition: 0.2s;
 }
 nav#nav1.borderBottom{
 	border-bottom: 1px solid #8c8c8c;
@@ -331,6 +333,7 @@ nav#nav1 a:focus-within h1{
 	border-radius: 5px;
 	-webkit-border-radius: 5px;
 	-moz-border-radius: 5px;
+	transition: 0.2s;
 }
 @media only screen and (min-width: 480px){
 	nav#nav1 h1{
@@ -372,6 +375,7 @@ nav#nav1 li a:focus-within span{
 	border-radius: 5px;
 	-webkit-border-radius: 5px;
 	-moz-border-radius: 5px;
+	transition: 0.2s;
 }
 nav#nav1 li a i{
 	color: #191716;
@@ -384,6 +388,7 @@ nav#nav1 li:nth-child(8) a:hover i,
 nav#nav1 li:nth-child(8) a:focus-within i{
 	color: white;
 	background-color: #1157AC;
+	transition: 0.2s;
 }
 @media only screen and (min-width: 480px){
 	nav#nav1 li a i{
