--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,51 @@
+#nav2{
+  transition: margin-right 0.7s;
+  overflow: hidden;
+	position: relative;
+}
+.sidebar-menu{
+	background-color: #E3E3E3;
+	padding-top: 60px;  
+	width: 0;
+	height: 100%;
+  position: fixed;
+	top: 0;
+  right: 0;
+  overflow-x: hidden;
+	transition: 0.7s;
+	opacity: 1;
+	z-index: 200;
+}
+.sidebar-menu a.close{
+	padding: 4px 7px 6px;
+	border-radius: 5px;
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	position: absolute;
+  top: .45em;
+  right: .85em;
+}
+@media only screen and (min-width: 480px){
+	.sidebar-menu a.close{
+		font-size: 1.2em;
+	}
+}
+@media only screen and (min-width: 768px){
+	.sidebar-menu a.close{
+		font-size: 1.3em;
+	}
+}
+.sidebar-menu a{
+  text-decoration: none;
+	white-space: nowrap;
+  padding: 20px 30px;
+	display: block;
+}
+.sidebar-menu a:hover{
+  color: #fff;
+  transition: 0.2s;
+}
+
 /* This CSS file has been developed from the CSS file for Fieldwork of Empire (https://awisnicki.github.io/fieldwork_of_empire/). The CSS code in the latter is released under a Creative Commons Attribution-NonCommercial 4.0 International (CC BY-NC 4.0) license (https://creativecommons.org/licenses/by-nc/4.0/). Please feel free to reuse the code in the file, just be sure to attribute it properly and publicly on your site. */
 
 /* This CSS Main File adapted from One More Voice (https://onemorevoice.org/) */
