--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,9 @@
-#nav2{
+nav#nav2{
   transition: margin-right 0.7s;
   overflow: hidden;
 	position: relative;
 }
-.sidebar-menu{
+nav#nav2 #sidebar-menu{
 	background-color: #E3E3E3;
 	padding-top: 60px;  
 	width: 0;
@@ -16,8 +16,13 @@
 	opacity: 1;
 	z-index: 200;
 }
-.sidebar-menu a.close{
-	padding: 4px 7px 6px;
+nav#nav2 #sidebar-menu ul{
+	list-style: none;
+	margin: 0;
+	padding: 0;
+}
+nav#nav2 #sidebar-menu li a.close{
+	padding: 2px 7px 4px;
 	border-radius: 5px;
 	-webkit-border-radius: 5px;
 	-moz-border-radius: 5px;
@@ -26,22 +31,22 @@
   right: .85em;
 }
 @media only screen and (min-width: 480px){
-	.sidebar-menu a.close{
+	nav#nav2 #sidebar-menu li a.close{
 		font-size: 1.2em;
 	}
 }
 @media only screen and (min-width: 768px){
-	.sidebar-menu a.close{
+	nav#nav2 #sidebar-menu li a.close{
 		font-size: 1.3em;
 	}
 }
-.sidebar-menu a{
+nav#nav2 #sidebar-menu a{
   text-decoration: none;
 	white-space: nowrap;
   padding: 20px 30px;
 	display: block;
 }
-.sidebar-menu a:hover{
+nav#nav2 #sidebar-menu li a:hover{
   color: #fff;
   transition: 0.2s;
 }
