update style css

--- a/css/style.css
+++ b/css/style.css
@@ -4,8 +4,7 @@ nav#nav2{
 	position: relative;
 }
 nav#nav2 #sidebar-menu{
-	background-color: #E3E3E3;
-	padding-top: 60px;  
+	background-color: #1C4C87;
 	width: 0;
 	height: 100%;
   position: fixed;
@@ -16,41 +15,74 @@ nav#nav2 #sidebar-menu{
 	opacity: 1;
 	z-index: 200;
 }
+nav#nav2 #sidebar-menu a{
+  color: #191716;
+	text-decoration: none;
+	white-space: nowrap;
+  padding: 20px 22px;
+	display: block;
+}
+nav#nav2 #sidebar-menu li a:hover,
+nav#nav2 #sidebar-menu li a:focus{
+  color: #fff;
+	background-color: rgba(0, 0, 0, 0.65);
+  transition: 0.2s;
+}
 nav#nav2 #sidebar-menu ul{
+	text-align: right;
 	list-style: none;
-	margin: 0;
+	margin: 39px 0 0 0;
 	padding: 0;
 }
+@media only screen and (min-width: 480px){
+	nav#nav2 #sidebar-menu ul{
+		padding: 44px;
+	}
+}
+@media only screen and (min-width: 768px){
+	nav#nav2 #sidebar-menu ul{
+		padding: 48px;
+	}
+}
+nav#nav2 #sidebar-menu ul li{
+	background: #E3E3E3;
+	border-bottom: 1px solid white;
+	/* opacity: .8; */
+}
+nav#nav2 #sidebar-menu ul li span{
+	font-size: .85em;
+}
 nav#nav2 #sidebar-menu li button.close{
+	font-size: 1.2em;
+	color: #fff;
 	background: none;
 	border: none;
 	border-radius: 5px;
 	-webkit-border-radius: 5px;
 	-moz-border-radius: 5px;
-	padding: 2px 7px 4px;
+	padding: 3px 8px;
 	position: absolute;
-  top: .45em;
-  right: .85em;
+  top: .35em;
+  right: .7em;
 }
 @media only screen and (min-width: 480px){
-	nav#nav2 #sidebar-menu li button.close{
-		font-size: 1.2em;
-	}
-}
-@media only screen and (min-width: 768px){
 	nav#nav2 #sidebar-menu li button.close{
 		font-size: 1.3em;
 	}
 }
-nav#nav2 #sidebar-menu a{
-  text-decoration: none;
-	white-space: nowrap;
-  padding: 20px 30px;
-	display: block;
+@media only screen and (min-width: 768px){
+	nav#nav2 #sidebar-menu li button.close{
+		font-size: 1.4em;
+	}
 }
-nav#nav2 #sidebar-menu li a:hover{
-  color: #fff;
-  transition: 0.2s;
+nav#nav2 #sidebar-menu li button.close:hover,
+nav#nav2 #sidebar-menu li button.close:focus{
+	color: #191716;
+	background-color: #E3E3E3;
+	border-radius: 5px;
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	transition: 0.2s;
 }
 
 /* This CSS file has been developed from the CSS file for Fieldwork of Empire (https://awisnicki.github.io/fieldwork_of_empire/). The CSS code in the latter is released under a Creative Commons Attribution-NonCommercial 4.0 International (CC BY-NC 4.0) license (https://creativecommons.org/licenses/by-nc/4.0/). Please feel free to reuse the code in the file, just be sure to attribute it properly and publicly on your site. */
@@ -339,19 +371,19 @@ nav#nav1 a:visited{
 	color: #191716;
 	text-decoration: none;
 }
-nav#nav1 a:hover,
+/* nav#nav1 a:hover,
 nav#nav1 a:focus{
 	color: white;
 	background: #191716;
 	transition: 0.2s;
-}
+} */
 nav#nav1.borderBottom{
 	border-bottom: 1px solid #8c8c8c;
 }
 nav#nav1 ul{
 	list-style: none;
 	margin: 0 auto;
-	padding: 0 .75em 0 0;
+	padding: 0 .5em 0 0;
 	height: 100%;
 	max-width: 898px;
 	display: flex;
@@ -379,6 +411,7 @@ nav#nav1 li{
 }
 nav#nav1 h1{
 	font-size: 1.3em;
+	white-space: nowrap;
 	padding: 10px;
 }
 nav#nav1 a:hover h1,
@@ -437,6 +470,7 @@ nav#nav1 li button{
 	border: none;
 }
 nav#nav1 li button i{
+	font-size: 1.1em;
 	color: #191716;
 	border-radius: 5px;
 	-webkit-border-radius: 5px;
@@ -452,6 +486,15 @@ nav#nav1 li button i{
 	nav#nav1 li button i{
 		font-size: 1.3em;
 	}
+}
+nav#nav1 li button i:hover,
+nav#nav1 li button i:focus{
+	color: white;
+	background-color: #1C4C87;
+	border-radius: 5px;
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	transition: 0.2s;
 }
 @media only screen and (min-width: 992px){
 	nav#nav1 > li:nth-child(8),
