--- a/css/style.css
+++ b/css/style.css
@@ -1,96 +1,3 @@
-nav#nav2{
-  transition: margin-right 0.7s;
-  overflow: hidden;
-	position: relative;
-}
-nav#nav2 #sidebar-menu{
-	background-color: #E3E3E3;
-	width: 0;
-	height: 100%;
-  position: fixed;
-	top: 0;
-  right: 0;
-  overflow-x: hidden;
-	transition: 0.7s;
-	opacity: 1;
-	z-index: 200;
-}
-nav#nav2 #sidebar-menu a{
-  color: #191716;
-	text-decoration: none;
-	white-space: nowrap;
-  padding: 20px 40px;
-	display: block;
-}
-nav#nav2 #sidebar-menu li a:hover,
-nav#nav2 #sidebar-menu li a:focus{
-  color: #fff;
-	background-color: #1C4C87;
-  transition: 0.2s;
-}
-nav#nav2 #sidebar-menu ul{
-	text-align: right;
-	list-style: none;
-	margin: 41px 0 0 0;
-	padding: 0;
-}
-@media only screen and (min-width: 480px){
-	nav#nav2 #sidebar-menu ul{
-		margin-top: 47px;
-	}
-}
-@media only screen and (min-width: 768px){
-	nav#nav2 #sidebar-menu ul{
-		margin-top: 51px;
-	}
-}
-nav#nav2 #sidebar-menu ul{
-	background: #E3E3E3;
-}
-nav#nav2 #sidebar-menu ul li{
-	border-bottom: 1px solid #fff;
-}
-nav#nav2 #sidebar-menu ul li span{
-	font-size: .85em;
-	font-family: 'Noto Serif', serif;
-}
-nav#nav2 #sidebar-menu li button.close{
-	font-size: 1.2em;
-	color: #191716;
-	background: none;
-	border: none;
-	border-radius: 5px;
-	-webkit-border-radius: 5px;
-	-moz-border-radius: 5px;
-	padding: 3px 8px 1px;
-	position: absolute;
-  top: .35em;
-  right: .4em;
-}
-@media only screen and (min-width: 480px){
-	nav#nav2 #sidebar-menu li button.close{
-		font-size: 1.4em;
-		top: .3em;
-		right: .7em;
-	}
-}
-@media only screen and (min-width: 768px){
-	nav#nav2 #sidebar-menu li button.close{
-		font-size: 1.6em;
-		top: .3em;
-		right: .63em;
-	}
-}
-nav#nav2 #sidebar-menu li button.close:hover,
-nav#nav2 #sidebar-menu li button.close:focus{
-	color: #fff;
-	background-color: #1C4C87;
-	border-radius: 5px;
-	-webkit-border-radius: 5px;
-	-moz-border-radius: 5px;
-	transition: 0.2s;
-}
-
 /* This CSS file has been developed from the CSS file for Fieldwork of Empire (https://awisnicki.github.io/fieldwork_of_empire/). The CSS code in the latter is released under a Creative Commons Attribution-NonCommercial 4.0 International (CC BY-NC 4.0) license (https://creativecommons.org/licenses/by-nc/4.0/). Please feel free to reuse the code in the file, just be sure to attribute it properly and publicly on your site. */
 
 /* This CSS Main File adapted from One More Voice (https://onemorevoice.org/) */
@@ -105,7 +12,8 @@ Table of Contents
 ** 1.0. Main CSS **
 1.1. Main Components
 1.2. Headings, Images, Anchors
-1.3. Navigation
+1.3.1. Navigation: Main
+1.3.2. Overlay
 1.4. Carousel 
 1.5. Scroll to Top Button
 1.6. Formatting
@@ -313,7 +221,7 @@ img{
 }
 
 
-/* 1.3. Navigation */
+/* 1.3.1. Navigation: Main */
 
 /* "Skip to main content" coding adapted from https://webaim.org/techniques/skipnav/ */
 #skiptocontent a{
@@ -507,13 +415,113 @@ nav#nav1 li button:hover i,
 nav#nav1 li button:focus i{
 	color: #fff;
 }
-
 @media only screen and (min-width: 992px){
-	nav#nav1 > li:nth-child(8),
-	nav#nav1 li button i{
+	nav#nav1 li button{
 		display: none;
 		visibility: hidden;
 	}
+}
+
+
+/* 1.3.2. Overlay */
+
+nav#nav2{
+  transition: margin-right 0.7s;
+  overflow: hidden;
+	position: relative;
+}
+@media only screen and (min-width: 992px){
+	nav#nav2{
+		display: none;
+		visibility: hidden;
+	}
+}
+nav#nav2 #sidebar-menu{
+	background-color: #E3E3E3;
+	width: 0;
+	height: 100%;
+  position: fixed;
+	top: 0;
+  right: 0;
+  overflow-x: hidden;
+	transition: 0.7s;
+	opacity: 1;
+	z-index: 200;
+}
+nav#nav2 #sidebar-menu a{
+  color: #191716;
+	text-decoration: none;
+	white-space: nowrap;
+  padding: 20px 40px;
+	display: block;
+}
+nav#nav2 #sidebar-menu li a:hover,
+nav#nav2 #sidebar-menu li a:focus{
+  color: #fff;
+	background-color: #1C4C87;
+  transition: 0.2s;
+}
+nav#nav2 #sidebar-menu ul{
+	text-align: right;
+	list-style: none;
+	margin: 41px 0 0 0;
+	padding: 0;
+}
+@media only screen and (min-width: 480px){
+	nav#nav2 #sidebar-menu ul{
+		margin-top: 47px;
+	}
+}
+@media only screen and (min-width: 768px){
+	nav#nav2 #sidebar-menu ul{
+		margin-top: 51px;
+	}
+}
+nav#nav2 #sidebar-menu ul{
+	background: #E3E3E3;
+}
+nav#nav2 #sidebar-menu ul li{
+	border-bottom: 1px solid #fff;
+}
+nav#nav2 #sidebar-menu ul li span{
+	font-size: .85em;
+	font-family: 'Noto Serif', serif;
+}
+nav#nav2 #sidebar-menu li button.close{
+	font-size: 1.2em;
+	color: #191716;
+	background: none;
+	border: none;
+	border-radius: 5px;
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	padding: 3px 8px 1px;
+	position: absolute;
+  top: .35em;
+  right: .4em;
+}
+@media only screen and (min-width: 480px){
+	nav#nav2 #sidebar-menu li button.close{
+		font-size: 1.4em;
+		top: .3em;
+		right: .7em;
+	}
+}
+@media only screen and (min-width: 768px){
+	nav#nav2 #sidebar-menu li button.close{
+		font-size: 1.6em;
+		top: .3em;
+		right: .63em;
+	}
+}
+nav#nav2 #sidebar-menu li button.close:hover,
+nav#nav2 #sidebar-menu li button.close:focus{
+	color: #fff;
+	background-color: #1C4C87;
+	border-radius: 5px;
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	transition: 0.2s;
 }
 
 
