--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,18 @@ Gray: #E3E3E3;
 Darker Gray: #8c8c8c;
 */
 
+/** z-index **/
+/*
+.carousel .controls button = 10
+nav#nav1 = 20
+#regular-button = 21
+#fallback-button = 22
+#topButton = 99
+#nav0 = 100
+nav#nav2 #overlay-menu = 200
+*/
+
+
 /** 1.0 Main CSS **/
 
 /* 1.1. Main Components */
@@ -141,14 +153,17 @@ footer{
 }
 /* The makes overlay disappear above 992 */
 @media only screen and (min-width: 992px){
+	html{
+		background: #fff !important;
+	}
 	#nav0,
 	#nav1,
 	header,
 	main,
 	footer{
 		display: block !important;
-		visibility: visible;
-		opacity: 1;
+		visibility: visible !important;
+		opacity: 1 !important;
 	}
 }
 
@@ -230,7 +245,7 @@ img{
 /* 1.3.1. Navigation: Main */
 
 /* "Skip to main content" coding adapted from https://webaim.org/techniques/skipnav/ */
-#skiptocontent a{
+#nav0 a{
 	font-size: .9em;
 	color: white;
 	background-color: #1157AC;
@@ -245,7 +260,7 @@ img{
 	-webkit-transition: top 1s ease-out;
 	transition: top .4s ease-out;
 }
-#skiptocontent a:focus{
+#nav0 a:focus{
 	outline-color: transparent;
 	position: fixed;
 	top: 0px;
@@ -254,7 +269,7 @@ img{
 	transition: top .4s ease-in;
 }
 @media only screen and (min-width: 768px){
-	#skiptocontent a:focus{
+	#nav0 a:focus{
 		position: absolute;
 	}
 }
@@ -343,6 +358,9 @@ nav#nav1 ul{
 nav#nav1 li{
 	display: inline-block;
 }
+nav#nav1 li:nth-child(8){
+	position: relative;
+}
 nav#nav1 h1{
 	font-size: 1.4em;
 	white-space: nowrap;
@@ -414,16 +432,26 @@ nav#nav1 li button{
 	-webkit-border-radius: 5px;
 	-moz-border-radius: 5px;
 	padding: 6px 7px 4px;
-}
-nav#nav1 li button:hover,
-nav#nav1 li button:focus-within{
-	background-color: #1C4C87;
-	transition: 0.2s;
+	position: absolute;
+	top: 50%;
+	right: 0;
+	transform: translate(0, -50%);
 }
 @media only screen and (min-width: 480px){
 	nav#nav1 li button{
 		padding: 5px 7px;
 	}
+}
+nav#nav1 li button#regular-button{
+	z-index: 21;
+}
+nav#nav1 li button#fallback-button{
+	z-index: 22;
+}
+nav#nav1 li button:hover,
+nav#nav1 li button:focus-within{
+	background-color: #1C4C87;
+	transition: 0.2s;
 }
 nav#nav1 li button i{
 	font-size: 1.1em;
@@ -462,6 +490,7 @@ nav#nav2{
 }
 @media only screen and (min-width: 992px){
 	nav#nav2{
+		margin-right: 0 !important;
 		display: none !important;
 		visibility: hidden !important;
 	}
